edit footer and nav elements to correct calls to action and some layout issues with the game spacing

--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ padding: 5px;
     padding-bottom: 10px;
  }
 
+ .game1 {
+     padding-top: 15px;
+ }
+
 .footer {
     text-align: center;
     font-size: 15px;
